Resized div to stop from stretching

--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
     @import url('https://fonts.cdnfonts.com/css/cursed-timer-ulil');
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
 h3{
@@ -17,6 +18,8 @@ h3{
     border-radius: 25px;
     background-color: #1B244A;
     margin: 50px auto 10px;
+    height: 500px;
+    width: 700px;
 
 }
 
